Fix a deadlock in KoShapeManager::paint()

We shouldn't take a lock recursively...

BUG:411365